Adjusted attributions, added sword model, and removed unused assets

--- a/ItsBuzzinessTime/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ItsBuzzinessTime/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -134,7 +134,7 @@ SnapScaleEnabled=False
 LastLevel=/Game/TopDown/Maps/TopDownMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Characters/Main/BP_TopDownCharacter.BP_TopDownCharacter
 OpenAssetsAtExit=/Game/Tasks/Blueprints/TaskProp_BP.TaskProp_BP
 OpenAssetsAtExit=/Game/Tasks/Blueprints/Mission/DistributeMemos_BP.DistributeMemos_BP
@@ -156,7 +156,7 @@ PerWorldEditorSettings=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", ()))
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=149.600
-WindowSize=X=1305.600 Y=745.600
+WindowSize=X=1307.200 Y=747.200
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2320,6 +2320,7 @@ Actor.WorldPartition=True
 /Game/Tasks/Blueprints/Time/FillCoffee_BP.FillCoffee_BP=0
 /Engine/EditorBlueprintResources/StandardMacros.StandardMacros=1
 /Game/Tasks/Blueprints/Mission/Missions_Enum.Missions_Enum=0
+/Game/Tasks/Blueprints/Mission/TaskPropMissionRecipient_BP.TaskPropMissionRecipient_BP=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
