Clock timer functionality and UI, destroy component on complete mission task, more logic for UI display on interactive tasks and specific email handling for interactive delete inbox task

--- a/ItsBuzzinessTime/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ItsBuzzinessTime/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -95,13 +95,13 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1804,Y=980)
+LastSize=(X=1844,Y=980)
 LastExecutedLaunchDevice=Windows@DESKTOP-91PI83P
 LastExecutedLaunchName=DESKTOP-91PI83P
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-NewWindowWidth=1804
+NewWindowWidth=1844
 NewWindowHeight=980
 MultipleInstancePositions=(X=76,Y=6)
 
@@ -136,10 +136,8 @@ LastLevel=/Game/TopDown/Maps/TopDownMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/LevelPrototyping/ClockTimer/ClockTimer_BP.ClockTimer_BP
-OpenAssetsAtExit=/Game/UI/ClockTimer/ClockTimer_Widget.ClockTimer_Widget
-OpenAssetsAtExit=/Game/Characters/Main/BP_TopDownCharacter.BP_TopDownCharacter
-OpenAssetsAtExit=/Game/TopDown/Maps/TopDownMap.TopDownMap:PersistentLevel.TopDownMap
+OpenAssetsAtExit=/Game/Tasks/Blueprints/TaskProp_BP.TaskProp_BP
+OpenAssetsAtExit=/Game/Tasks/Blueprints/Mission/TaskPropMissionRecipient_BP.TaskPropMissionRecipient_BP
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -155,7 +153,7 @@ PerWorldEditorSettings=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", ()))
 
 [RootWindow]
 ScreenPosition=X=119.200 Y=112.000
-WindowSize=X=1312.000 Y=752.000
+WindowSize=X=1313.600 Y=753.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1184,7 +1182,7 @@ LODInfoUILayout=
 SceneCaptureComponent2D=SceneCaptureComponent2D.SceneCapture.General Show Flags,
 WidgetComponent=WidgetComponent.Physics.ConstraintsGroup,WidgetComponent.Materials.MaterialList,
 PaperSpriteComponent=PaperSpriteComponent.Physics.ConstraintsGroup,
-TaskProp_BP_C=PaperSpriteComponent.Physics.ConstraintsGroup,
+TaskProp_BP_C=PaperSpriteComponent.Physics.ConstraintsGroup,SceneCapture2D.SceneCapture.Hidden Show Flags,
 K2Node_VariableGet=PaperSpriteComponent.Physics.ConstraintsGroup,SceneCapture2D.SceneCapture.Hidden Show Flags,
 BP_TopDownCharacter_C=
 DraggableItem_Widget_C=PaperSpriteComponent.Physics.ConstraintsGroup,
@@ -1192,17 +1190,17 @@ PropertyWrapper=PaperSpriteComponent.Physics.ConstraintsGroup,SceneCapture2D.Sce
 K2Node_VariableSet=PaperSpriteComponent.Physics.ConstraintsGroup,SceneCapture2D.SceneCapture.Hidden Show Flags,
 InteractiveUI1_Widget_C=PaperSpriteComponent.Physics.ConstraintsGroup,
 WidgetDrag_C=
-K2Node=PaperSpriteComponent.Physics.ConstraintsGroup,
+K2Node=PaperSpriteComponent.Physics.ConstraintsGroup,SceneCapture2D.SceneCapture.Hidden Show Flags,
 EdGraphNode_Comment=PaperSpriteComponent.Physics.ConstraintsGroup,
 StaticMeshComponent=PaperSpriteComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,SceneCapture2D.SceneCapture.Hidden Show Flags,
 K2Node_Variable=PaperSpriteComponent.Physics.ConstraintsGroup,SceneCapture2D.SceneCapture.Hidden Show Flags,
 TaskTimerWheel_Widget_C=PaperSpriteComponent.Physics.ConstraintsGroup,
 K2Node_FunctionEntry=PaperSpriteComponent.Physics.ConstraintsGroup,
-K2Node_MacroInstance=PaperSpriteComponent.Physics.ConstraintsGroup,
+K2Node_MacroInstance=PaperSpriteComponent.Physics.ConstraintsGroup,SceneCapture2D.SceneCapture.Hidden Show Flags,
 TopDownMap_C=
-K2Node_CustomEvent=PaperSpriteComponent.Physics.ConstraintsGroup,
+K2Node_CustomEvent=PaperSpriteComponent.Physics.ConstraintsGroup,SceneCapture2D.SceneCapture.Hidden Show Flags,
 Character=PaperSpriteComponent.Physics.ConstraintsGroup,
-TaskPropMissionRecipient_BP_C=PaperSpriteComponent.Physics.ConstraintsGroup,
+TaskPropMissionRecipient_BP_C=PaperSpriteComponent.Physics.ConstraintsGroup,SceneCapture2D.SceneCapture.Hidden Show Flags,
 BoxComponent=
 SceneComponent=
 StaticMeshActor=PaperSpriteComponent.Physics.ConstraintsGroup,SceneCapture2D.SceneCapture.Hidden Show Flags,
@@ -1211,17 +1209,21 @@ TextRenderComponent=PaperSpriteComponent.Physics.ConstraintsGroup,
 Actor=PaperSpriteComponent.Physics.ConstraintsGroup,SceneCapture2D.SceneCapture.Hidden Show Flags,
 UserDefinedStruct=UserDefinedStruct.DefaultValues.Sender_3_204723D948243D3819F583A4C1E121BE,UserDefinedStruct.DefaultValues.Content_5_2D5F1B4544A446CCAD179E89CDE6E88A,
 Email_Struct=
-EmailMessage_Widget_C=PaperSpriteComponent.Physics.ConstraintsGroup,
-DeleteEmails_BP_C=PaperSpriteComponent.Physics.ConstraintsGroup,
+EmailMessage_Widget_C=PaperSpriteComponent.Physics.ConstraintsGroup,SceneCapture2D.SceneCapture.Hidden Show Flags,
+DeleteEmails_BP_C=PaperSpriteComponent.Physics.ConstraintsGroup,SceneCapture2D.SceneCapture.Hidden Show Flags,
 EmailUI_Widget_C=PaperSpriteComponent.Physics.ConstraintsGroup,
-EmailScrollBox_Widget_C=PaperSpriteComponent.Physics.ConstraintsGroup,
-EmailScrollUI_Widget_C=PaperSpriteComponent.Physics.ConstraintsGroup,
+EmailScrollBox_Widget_C=PaperSpriteComponent.Physics.ConstraintsGroup,SceneCapture2D.SceneCapture.Hidden Show Flags,
+EmailScrollUI_Widget_C=PaperSpriteComponent.Physics.ConstraintsGroup,SceneCapture2D.SceneCapture.Hidden Show Flags,
 FillCoffee_BP_C=PaperSpriteComponent.Physics.ConstraintsGroup,
 SceneCapture2D=PaperSpriteComponent.Physics.ConstraintsGroup,SceneCapture2D.SceneCapture.Hidden Show Flags,
 BrushComponent=PaperSpriteComponent.Physics.ConstraintsGroup,SceneCapture2D.SceneCapture.Hidden Show Flags,
 NavMeshBoundsVolume=PaperSpriteComponent.Physics.ConstraintsGroup,SceneCapture2D.SceneCapture.Hidden Show Flags,
 ClockTimer_BP_C=PaperSpriteComponent.Physics.ConstraintsGroup,SceneCapture2D.SceneCapture.Hidden Show Flags,
 BillboardComponent=PaperSpriteComponent.Physics.ConstraintsGroup,SceneCapture2D.SceneCapture.Hidden Show Flags,
+K2Node_InputKey=PaperSpriteComponent.Physics.ConstraintsGroup,SceneCapture2D.SceneCapture.Hidden Show Flags,
+EmailScreenUI_Widget_C=PaperSpriteComponent.Physics.ConstraintsGroup,SceneCapture2D.SceneCapture.Hidden Show Flags,
+EmailUIInbox_Widget_C=PaperSpriteComponent.Physics.ConstraintsGroup,SceneCapture2D.SceneCapture.Hidden Show Flags,
+Interactive_Widget_C=PaperSpriteComponent.Physics.ConstraintsGroup,SceneCapture2D.SceneCapture.Hidden Show Flags,
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1241,7 +1243,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Game/UI/Interactive/Email
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1312,26 +1314,26 @@ AssetDialog.CurrentViewType=1
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Characters/Main/BP_TopDownCharacter
-MRUItem1=/Game/UI/ClockTimer/ClockTimer_Widget
-MRUItem2=/Game/LevelPrototyping/ClockTimer/ClockTimer_BP
-MRUItem3=/Game/LevelPrototyping/Clock_RenderTarget
-MRUItem4=/Game/LevelPrototyping/ClockRenderTarget_Mat
-MRUItem5=/Engine/EngineSky/M_SimpleSkyDome
-MRUItem6=/Game/Tasks/Blueprints/Interactive/DeleteEmails_BP
-MRUItem7=/Game/UI/Interactive/Email/EmailScrollBox_Widget
-MRUItem8=/Game/UI/Interactive/Email/EmailScrollUI_Widget
-MRUItem9=/Game/Tasks/Blueprints/Mission/TaskPropMissionRecipient_BP
-MRUItem10=/Game/UI/Interactive/Email/EmailScreenUI_Widget
-MRUItem11=/Game/Tasks/Blueprints/TaskProp_BP
-MRUItem12=/Game/Tasks/TaskTypes_Enum
-MRUItem13=/Game/UI/ProgressBar/TaskTimerWheel_Widget
-MRUItem14=/Game/Tasks/Blueprints/Mission/DistributeMemos_BP
-MRUItem15=/Game/UI/Interactive/Email/Email_Struct
-MRUItem16=/Game/UI/Interactive/Email/EmailUI_Widget
-MRUItem17=/Game/UI/Interactive/Email/EmailMessage_Widget
-MRUItem18=/Game/UI/Interactive/Email/Email_Widget
-MRUItem19=/Game/StarterContent/Particles/P_Fire
+MRUItem0=/Game/Tasks/Blueprints/Mission/TaskPropMissionRecipient_BP
+MRUItem1=/Game/Tasks/Blueprints/TaskProp_BP
+MRUItem2=/Game/UI/Interactive/Interactive_Widget
+MRUItem3=/Game/UI/Interactive/Email/EmailScrollUI_Widget
+MRUItem4=/Game/UI/Interactive/Email/EmailScreenUI_Widget
+MRUItem5=/Game/Characters/Main/BP_TopDownCharacter
+MRUItem6=/Game/UI/ClockTimer/ClockTimer_Widget
+MRUItem7=/Game/LevelPrototyping/ClockTimer/ClockTimer_BP
+MRUItem8=/Game/LevelPrototyping/Clock_RenderTarget
+MRUItem9=/Game/LevelPrototyping/ClockRenderTarget_Mat
+MRUItem10=/Engine/EngineSky/M_SimpleSkyDome
+MRUItem11=/Game/Tasks/Blueprints/Interactive/DeleteEmails_BP
+MRUItem12=/Game/UI/Interactive/Email/EmailScrollBox_Widget
+MRUItem13=/Game/Tasks/TaskTypes_Enum
+MRUItem14=/Game/UI/ProgressBar/TaskTimerWheel_Widget
+MRUItem15=/Game/Tasks/Blueprints/Mission/DistributeMemos_BP
+MRUItem16=/Game/UI/Interactive/Email/Email_Struct
+MRUItem17=/Game/UI/Interactive/Email/EmailUI_Widget
+MRUItem18=/Game/UI/Interactive/Email/EmailMessage_Widget
+MRUItem19=/Game/UI/Interactive/Email/Email_Widget
 
 [DetailCategories]
 BP_TopDownCharacter_C.Camera=True
@@ -2559,6 +2561,36 @@ ClockTimer_BP_C.HLOD=True
 ClockTimer_BP_C.WorldPartition=True
 ClockTimer_BP_C.Events=True
 ClockTimer_BP_C.TransformCommon=True
+EmailScrollUI_Widget_C.Default=True
+EmailScrollUI_Widget_C.Designer=True
+Widget.Layout=True
+EmailUIInbox_Widget_C.Default=True
+EmailUIInbox_Widget_C.Appearance=True
+EmailUIInbox_Widget_C.Designer=True
+EmailUIInbox_Widget_C.Input=True
+EmailUIInbox_Widget_C.Interaction=True
+EmailUIInbox_Widget_C.Performance=True
+EmailUIInbox_Widget_C.Layout=True
+EmailUIInbox_Widget_C.Behavior=True
+EmailUIInbox_Widget_C.Render Transform=True
+EmailUIInbox_Widget_C.Localization=True
+EmailUIInbox_Widget_C.Accessibility=True
+EmailUIInbox_Widget_C.Clipping=True
+EmailUIInbox_Widget_C.Navigation=True
+Interactive_Widget_C.Appearance=True
+Interactive_Widget_C.Designer=True
+Interactive_Widget_C.Input=True
+Interactive_Widget_C.Interaction=True
+Interactive_Widget_C.Performance=True
+Interactive_Widget_C.Layout=True
+Interactive_Widget_C.Behavior=True
+Interactive_Widget_C.Render Transform=True
+Interactive_Widget_C.Localization=True
+Interactive_Widget_C.Accessibility=True
+Interactive_Widget_C.Clipping=True
+Interactive_Widget_C.Navigation=True
+Interactive_Widget_C.Default=True
+CanvasPanel.Layout=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDown/Blueprints/BP_TopDownController.BP_TopDownController=0
@@ -2631,6 +2663,10 @@ ClockTimer_BP_C.TransformCommon=True
 /Engine/EngineSky/M_SimpleSkyDome.M_SimpleSkyDome=0
 /Game/LevelPrototyping/Clock_RenderTarget.Clock_RenderTarget=0
 /Game/LevelPrototyping/ClockRenderTarget_Mat.ClockRenderTarget_Mat=0
+/Game/LevelPrototyping/ClockTimer/ClockTimer_BP.ClockTimer_BP=0
+/Game/UI/ClockTimer/ClockTimer_Widget.ClockTimer_Widget=0
+/Game/UI/Interactive/Interactive_Widget.Interactive_Widget=0
+/Game/UI/Interactive/Email/EmailUIInbox_Widget.EmailUIInbox_Widget=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2780,8 +2816,8 @@ PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 LODInfoUILayout="\"Object.LODInfo.BuildSettings\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget=
+Visual=
 SceneCaptureComponent2D="\"Object.SceneCapture.ShowFlagSettings.ShowFlagSettings[0]\" "
 SceneCaptureComponent="\"Object.SceneCapture.ShowFlagSettings.ShowFlagSettings[0]\" "
 SceneComponent=
@@ -2816,12 +2852,12 @@ ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Co
 ParticleModuleSpawn="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModuleSpawnBase="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
 CheckBox="\"Object.Style.WidgetStyle\" \"Object.Render Transform.RenderTransform\" "
-ContentWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.NormalForeground\" \"Object.Appearance.WidgetStyle.HoveredForeground\" \"Object.Appearance.WidgetStyle.PressedForeground\" \"Object.Appearance.WidgetStyle.DisabledForeground\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.NormalForeground\" \"Object.Appearance.WidgetStyle.HoveredForeground\" \"Object.Appearance.WidgetStyle.PressedForeground\" \"Object.Appearance.WidgetStyle.DisabledForeground\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Border="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 EmailMessage_Widget_C=
-UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+UserWidget=
 Email_Struct="\"Struct.Sender_3_204723D948243D3819F583A4C1E121BE\" \"Struct.Content_5_2D5F1B4544A446CCAD179E89CDE6E88A\" "
 ScrollBox="\"Object.Style.WidgetStyle.TopShadowBrush\" \"Object.Style.WidgetStyle.TopShadowBrush.TintColor\" \"Object.Style.WidgetStyle.TopShadowBrush.OutlineSettings.Color\" \"Object.Style.WidgetStyle.BottomShadowBrush.TintColor\" \"Object.Style.WidgetStyle.BottomShadowBrush.OutlineSettings.Color\" \"Object.Style.WidgetStyle.LeftShadowBrush.TintColor\" \"Object.Style.WidgetStyle.LeftShadowBrush.OutlineSettings.Color\" \"Object.Style.WidgetStyle.RightShadowBrush.TintColor\" \"Object.Style.WidgetStyle.RightShadowBrush.OutlineSettings.Color\" \"Object.Style.WidgetBarStyle\" \"Object.Style.WidgetBarStyle.HorizontalBackgroundImage.OutlineSettings.Color\" \"Object.Style.WidgetBarStyle.VerticalBackgroundImage.OutlineSettings.Color\" \"Object.Style.WidgetBarStyle.VerticalTopSlotImage.TintColor\" \"Object.Style.WidgetBarStyle.VerticalTopSlotImage.OutlineSettings.Color\" \"Object.Style.WidgetBarStyle.HorizontalTopSlotImage.TintColor\" \"Object.Style.WidgetBarStyle.HorizontalTopSlotImage.OutlineSettings.Color\" \"Object.Style.WidgetBarStyle.VerticalBottomSlotImage.TintColor\" \"Object.Style.WidgetBarStyle.VerticalBottomSlotImage.OutlineSettings.Color\" \"Object.Style.WidgetBarStyle.HorizontalBottomSlotImage.TintColor\" \"Object.Style.WidgetBarStyle.HorizontalBottomSlotImage.OutlineSettings.Color\" \"Object.Style.WidgetBarStyle.NormalThumbImage\" \"Object.Style.WidgetBarStyle.NormalThumbImage.TintColor\" \"Object.Style.WidgetBarStyle.NormalThumbImage.OutlineSettings.Color\" \"Object.Style.WidgetBarStyle.HoveredThumbImage.TintColor\" \"Object.Style.WidgetBarStyle.HoveredThumbImage.OutlineSettings.Color\" \"Object.Style.WidgetBarStyle.DraggedThumbImage.TintColor\" \"Object.Style.WidgetBarStyle.DraggedThumbImage.OutlineSettings.Color\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 EmailScrollBox_Widget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -2835,6 +2871,8 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 SceneCapture2D="\"Object.DecalActor.CaptureComponent2D.Object.SceneCapture.HiddenActors\" \"Object.DecalActor.CaptureComponent2D.Object.SceneCapture.ShowOnlyActors\" "
 SceneCapture="\"Object.DecalActor.CaptureComponent2D.Object.SceneCapture.HiddenActors\" \"Object.DecalActor.CaptureComponent2D.Object.SceneCapture.ShowOnlyActors\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+EmailUIInbox_Widget_C=
+Interactive_Widget_C=
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
@@ -3117,7 +3155,7 @@ PreviewAspectRatio=16:9
 bIsInPortraitMode=False
 ProfileName=
 ScaleFactor=1
-bCanPreviewSwapAspectRatio=False
+bCanPreviewSwapAspectRatio=True
 
 [UMGSequencerSettings SequencerSettings]
 AutoChangeMode=None
