Fixed bug where TaskProp_BP would tick on game start unconditionally. Added some tasks to list

--- a/ItsBuzzinessTime/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ItsBuzzinessTime/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -139,6 +139,7 @@ CleanShutdown=False
 OpenAssetsAtExit=/Game/Tasks/Blueprints/TaskProp_BP.TaskProp_BP
 OpenAssetsAtExit=/Game/Characters/Main/BP_TopDownCharacter.BP_TopDownCharacter
 OpenAssetsAtExit=/Game/UI/TaskList/TaskItem_Widget.TaskItem_Widget
+OpenAssetsAtExit=/Game/Tasks/Blueprints/Mission/TaskPropMissionRecipient_BP.TaskPropMissionRecipient_BP
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -154,7 +155,7 @@ PerWorldEditorSettings=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", ()))
 
 [RootWindow]
 ScreenPosition=X=119.200 Y=112.000
-WindowSize=X=1316.800 Y=756.800
+WindowSize=X=1318.400 Y=758.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1229,6 +1230,7 @@ TaskItem_Widget_C=PaperSpriteComponent.Physics.ConstraintsGroup,SceneCapture2D.S
 GlobalUI_Widget_C=PaperSpriteComponent.Physics.ConstraintsGroup,SceneCapture2D.SceneCapture.Hidden Show Flags,
 TaskList_Widget_C=PaperSpriteComponent.Physics.ConstraintsGroup,SceneCapture2D.SceneCapture.Hidden Show Flags,
 K2Node_MakeStruct=PaperSpriteComponent.Physics.ConstraintsGroup,SceneCapture2D.SceneCapture.Hidden Show Flags,
+K2Node_CallFunction=PaperSpriteComponent.Physics.ConstraintsGroup,SceneCapture2D.SceneCapture.Hidden Show Flags,
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1319,18 +1321,18 @@ AssetDialog.CurrentViewType=1
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UI/GlobalUI_Widget
+MRUItem0=/Game/Tasks/Blueprints/Mission/TaskPropMissionRecipient_BP
 MRUItem1=/Game/UI/TaskList/TaskItem_Widget
-MRUItem2=/Game/UI/TaskList/TaskList_Widget
-MRUItem3=/Game/Characters/Main/BP_TopDownCharacter
-MRUItem4=/Game/Tasks/Blueprints/TaskProp_BP
-MRUItem5=/Game/UI/ProgressBar/TaskTimerWheel_Widget
-MRUItem6=/Game/UI/Interactive/Email/EmailUIInbox_Widget
-MRUItem7=/Game/UI/Interactive/Email/EmailMessage_Widget
-MRUItem8=/Game/UI/Interactive/Email/EmailScrollBox_Widget
-MRUItem9=/Game/LevelPrototyping/ClockTimer/ClockTimer_BP
-MRUItem10=/Game/UI/MiniMap/WholeMap_Widget
-MRUItem11=/Game/Tasks/Blueprints/Mission/TaskPropMissionRecipient_BP
+MRUItem2=/Game/Characters/Main/BP_TopDownCharacter
+MRUItem3=/Game/Tasks/Blueprints/TaskProp_BP
+MRUItem4=/Game/UI/GlobalUI_Widget
+MRUItem5=/Game/UI/TaskList/TaskList_Widget
+MRUItem6=/Game/UI/ProgressBar/TaskTimerWheel_Widget
+MRUItem7=/Game/UI/Interactive/Email/EmailUIInbox_Widget
+MRUItem8=/Game/UI/Interactive/Email/EmailMessage_Widget
+MRUItem9=/Game/UI/Interactive/Email/EmailScrollBox_Widget
+MRUItem10=/Game/LevelPrototyping/ClockTimer/ClockTimer_BP
+MRUItem11=/Game/UI/MiniMap/WholeMap_Widget
 MRUItem12=/Game/UI/Interactive/Interactive_Widget
 MRUItem13=/Game/UI/Interactive/Email/EmailScrollUI_Widget
 MRUItem14=/Game/UI/Interactive/Email/EmailScreenUI_Widget
@@ -2902,11 +2904,11 @@ TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font
 Font="\"Object.Font\" \"Object.OfflineFont.ImportOptions\" "
 FontFace="\"Object.FontFace\" "
 PaperSpriteComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-PrimitiveComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PrimitiveComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-ShapeComponent=
+ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 TextRenderComponent="\"Object.Lighting.LightingChannels\" "
 ParticleSystemComponent="\"Object.Lighting.LightingChannels\" "
 FXSystemComponent="\"Object.Lighting.LightingChannels\" "
@@ -3209,7 +3211,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=PIE
 
 [/Script/UnrealEd.AnimationBlueprintEditorOptions]
 bHideUnrelatedNodes=False
