Adjusted gitignore and rm purchased assets

--- a/.gitignore
+++ b/.gitignore
@@ -71,4 +71,7 @@ Intermediate/*
 Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
-DerivedDataCache/*
+DerivedDataCache/*j
+
+# Purchased Assets
+/PolygonOffice/
