--- a/ItsBuzzinessTime/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ItsBuzzinessTime/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -95,7 +95,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1914,Y=980)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=Windows@DESKTOP-91PI83P
 LastExecutedLaunchName=DESKTOP-91PI83P
 LastExecutedPIEPreviewDevice=
@@ -131,7 +131,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 SnapScaleEnabled=False
 
 [EditorStartup]
-LastLevel=/Game/PolygonOffice/Maps/Demonstration
+LastLevel=/Game/PolygonOffice/Maps/MyAttempt
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -1260,7 +1260,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/PolygonOffice/Meshes/Props
+ContentBrowserDrawer.SelectedPaths=/Game/PolygonOffice/Maps
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1331,26 +1331,26 @@ AssetDialog.CurrentViewType=1
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Characters/Main/DirectionFacing
-MRUItem1=/Game/PolygonOffice/Meshes/Buildings/SM_Bld_Wall_Glass_Door_01_Glass
-MRUItem2=/Game/PolygonOffice/Meshes/Buildings/SM_Bld_Wall_Glass_Door_01
-MRUItem3=/Game/PolygonOffice/Maps/Demonstration
-MRUItem4=/Game/TopDown/Maps/TopDownMap
-MRUItem5=/Game/TopDown/Maps/Floor1
-MRUItem6=/Game/UI/ProgressBar/TaskTimerWheel_Widget
-MRUItem7=/Game/Tasks/Blueprints/Mission/TaskPropMissionRecipient_BP
-MRUItem8=/Game/UI/TaskList/TaskItem_Widget
-MRUItem9=/Game/Characters/Main/BP_TopDownCharacter
-MRUItem10=/Game/Tasks/Blueprints/TaskProp_BP
-MRUItem11=/Game/UI/GlobalUI_Widget
-MRUItem12=/Game/UI/TaskList/TaskList_Widget
-MRUItem13=/Game/UI/Interactive/Email/EmailUIInbox_Widget
-MRUItem14=/Game/UI/Interactive/Email/EmailMessage_Widget
-MRUItem15=/Game/UI/Interactive/Email/EmailScrollBox_Widget
-MRUItem16=/Game/LevelPrototyping/ClockTimer/ClockTimer_BP
-MRUItem17=/Game/UI/MiniMap/WholeMap_Widget
-MRUItem18=/Game/UI/Interactive/Interactive_Widget
-MRUItem19=/Game/UI/Interactive/Email/EmailScrollUI_Widget
+MRUItem0=/Game/PolygonOffice/Maps/MyAttempt
+MRUItem1=/Game/Characters/Main/DirectionFacing
+MRUItem2=/Game/PolygonOffice/Meshes/Buildings/SM_Bld_Wall_Glass_Door_01_Glass
+MRUItem3=/Game/PolygonOffice/Meshes/Buildings/SM_Bld_Wall_Glass_Door_01
+MRUItem4=/Game/PolygonOffice/Maps/Demonstration
+MRUItem5=/Game/TopDown/Maps/TopDownMap
+MRUItem6=/Game/TopDown/Maps/Floor1
+MRUItem7=/Game/UI/ProgressBar/TaskTimerWheel_Widget
+MRUItem8=/Game/Tasks/Blueprints/Mission/TaskPropMissionRecipient_BP
+MRUItem9=/Game/UI/TaskList/TaskItem_Widget
+MRUItem10=/Game/Characters/Main/BP_TopDownCharacter
+MRUItem11=/Game/Tasks/Blueprints/TaskProp_BP
+MRUItem12=/Game/UI/GlobalUI_Widget
+MRUItem13=/Game/UI/TaskList/TaskList_Widget
+MRUItem14=/Game/UI/Interactive/Email/EmailUIInbox_Widget
+MRUItem15=/Game/UI/Interactive/Email/EmailMessage_Widget
+MRUItem16=/Game/UI/Interactive/Email/EmailScrollBox_Widget
+MRUItem17=/Game/LevelPrototyping/ClockTimer/ClockTimer_BP
+MRUItem18=/Game/UI/MiniMap/WholeMap_Widget
+MRUItem19=/Game/UI/Interactive/Interactive_Widget
 
 [DetailCategories]
 BP_TopDownCharacter_C.Camera=True
@@ -2676,6 +2676,8 @@ MulticastInlineDelegatePropertyWrapper.Variable=True
 MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
 StaticMesh.Thumbnail=True
 StaticMesh.LevelOfDetail=True
+NavMeshBoundsVolume.RayTracing=True
+NavMeshBoundsVolume.AssetUserData=False
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDown/Blueprints/BP_TopDownController.BP_TopDownController=0
@@ -2898,10 +2900,13 @@ PaperSprite.Sprite=False
 ParticleSpriteEmitter.Particle=True
 TextBlock.Appearance=False
 StaticMesh.Collision=True
+NavMeshBoundsVolume.HLOD=False
+NavMeshBoundsVolume.Collision=False
+NavMeshBoundsVolume.BrushSettings=False
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[3]\" "
-Object=
+Object="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 LODInfoUILayout="\"Object.LODInfo.BuildSettings\" "
@@ -2990,9 +2995,10 @@ bPromptBeforeAutoImporting=True
 bDeleteSourceFilesWithAssets=False
 
 [MRU]
-MRUItem0=/Game/PolygonOffice/Maps/Demonstration
-MRUItem1=/Game/TopDown/Maps/TopDownMap
-MRUItem2=/Game/TopDown/Maps/Floor1
+MRUItem0=/Game/PolygonOffice/Maps/MyAttempt
+MRUItem1=/Game/PolygonOffice/Maps/Demonstration
+MRUItem2=/Game/TopDown/Maps/TopDownMap
+MRUItem3=/Game/TopDown/Maps/Floor1
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -3317,6 +3323,7 @@ MovieRendererName=
 PreserveScaleRatio=True
 
 [PlacementMode]
+RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Game/PolygonOffice/Meshes/Props/Misc/SM_Prop_TableTennis_01.SM_Prop_TableTennis_01;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
@@ -3336,7 +3343,6 @@ RecentlyPlaced=/Game/PolygonOffice/Meshes/Props/Wall/SM_Prop_CubicalWall_01.SM_P
 RecentlyPlaced=/Game/Tasks/Blueprints/Mission/TaskPropMissionRecipient_BP.TaskPropMissionRecipient_BP;
 RecentlyPlaced=/Game/Tasks/Blueprints/Mission/DistributeMemos_BP.DistributeMemos_BP;
 RecentlyPlaced=/Game/PolygonOffice/Meshes/Props/Desk/SM_Prop_Printer_Mini_01.SM_Prop_Printer_Mini_01;
-RecentlyPlaced=/Game/PolygonOffice/Meshes/Props/Desk/SM_Prop_Printer_01.SM_Prop_Printer_01;
 
 [/Script/UnrealEd.CascadeOptions]
 ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
