Humongous amount of updates: UI updates, staging settings, updates to AI, bugfixes, post-stage screens, SFX start

--- a/ItsBuzzinessTime/Config/DefaultEngine.ini
+++ b/ItsBuzzinessTime/Config/DefaultEngine.ini
@@ -2,14 +2,15 @@
 GameName=ItsBuzzinessTime
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
-GameDefaultMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
+EditorStartupMap=/Game/PolygonOffice/Maps/StageOne.StageOne
+GameDefaultMap=/Game/PolygonOffice/Maps/StageOne.StageOne
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/TopDown/Blueprints/BP_TopDownGameMode.BP_TopDownGameMode_C
 GlobalDefaultServerGameMode=None
+GameInstanceClass=/Game/GameInstance_BP.GameInstance_BP_C
 
 [/Script/NavigationSystem.RecastNavMesh]
 bDrawPolyEdges=False
